--- a/Atividades-Presencial/css/materia2/interface.css
+++ b/Atividades-Presencial/css/materia2/interface.css
@@ -1,3 +1,6 @@
+*{
+    margin: 0;
+}
 body{
     display: grid;
     row-gap: 7px;
@@ -8,18 +11,29 @@ body{
 header, main, footer{
     border: 3px solid green;
 }
+
 main{
     height: 100vh; /*1vh é igual a 1/100 da altura da tela*/
 }
+
 nav{
     margin: 6px 6px 6px 75%;
     border: 3px solid orange;
 }
+
 aside{
     border: 3px solid orange;
     flex-direction: column;
-    float: right;
     width: 45vh;
     margin: 6px 6px 0 0;
 }
 
+h1{
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-start: 0px;
+    font-weight: bold;
+}
