--- a/Atividades-Presencial/css/materia2/interface.css
+++ b/Atividades-Presencial/css/materia2/interface.css
@@ -1,39 +1,106 @@
 *{
-    margin: 0;
+    margin: 0px;
 }
 body{
+    height: 100vh;
     display: grid;
-    row-gap: 7px;
-    color: red;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 1fr 70px;
+    gap: 10px;
     background-color: black;
 }
 
+header{
+    display: flex;
+    justify-content: space-between;
+}
+
 header, main, footer{
-    border: 3px solid green;
+    border: 5px solid green;
+    color: red;
+    padding: 1.2rem;
 }
 
 main{
-    height: 100vh; /*1vh é igual a 1/100 da altura da tela*/
+    display: grid;
+    grid-template-columns: 1fr 30%;
+    grid-template-rows: 40px 1fr 100px;
+    grid-template-areas: 
+        "h1 aside"
+        "secao1 aside"
+        "secao2 aside"
+    ;
+    gap: 10px
 }
 
 nav{
-    margin: 6px 6px 6px 75%;
-    border: 3px solid orange;
+    width: 70%;
 }
 
 aside{
-    border: 3px solid orange;
-    flex-direction: column;
-    width: 45vh;
-    margin: 6px 6px 0 0;
+    grid-area: aside;
 }
 
-h1{
-    display: block;
-    font-size: 2em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-start: 0px;
-    font-weight: bold;
+main>h1{
+    grid-area: h1;
+}
+
+#secao1{
+    grid-area: secao1;
+}
+
+#secao2{
+    grid-area: secao2;
+}
+
+nav, section, aside{
+    border: 5px solid orange;
+    color: orange;
+    padding: 10px;
+    margin: 5px 0;
+}
+
+aside section{
+    border: 5px solid blue !important;
+    color: blue !important;
+}
+
+section>article{
+    border: 5px solid blue;
+    color: blue;
+    height: 4rem;
+    margin-top: 5px;
+    padding: 0.8rem;
+}
+
+@media (max-width: 680px){
+    main {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 40px 1fr 100px auto;
+        grid-template-areas:
+          "h1"
+          "secao01"
+          "secao02"
+          "aside"
+        ;
+        gap: 10px;
+    }
+    
+    aside {
+        overflow: hidden;
+        /* display: flex;
+        flex-direction: column; */
+    }
+    
+    aside>div {
+        display: flex;
+        overflow: scroll;
+        overflow-y: hidden;
+    }
+    
+    aside section {
+        margin-right: 5px;
+        min-width: 100px;
+    }
 }
